# Golf_bros_app

./: .gitignore  Procfile  README.md  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
backend/: settings.py  settings_prod.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: Logo.jsx
frontend/src/pages/: CreatePost.jsx  Home.jsx  Login.jsx  PostDetail.jsx  Profile.jsx  Register.jsx
posts/: models.py  permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
